--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@
 #
 default: &default
   adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 20 } %>
+  timeout: 10000
 
 development:
   <<: *default
@@ -18,7 +18,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: sqlite3
+  database: db/rails_test.sqlite3
+  timeout: 10000
 
 production:
   <<: *default
